objects/Custom_OpportunityHistory__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <label>ExpectedRevenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <label>ForecastCategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Custom OpportunityHistory</relationshipLabel>
        <relationshipName>Custom_OpportunityHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>StageName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Custom OpportunityHistory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OpportunityId__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>StageName__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CloseDate__c</columns>
        <columns>ForecastCategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>equals</operation>
            <value>nsaec</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OppHistory-{000}</displayFormat>
        <label>Custom OpportunityHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom OpportunityHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>